# cura-build

./: .gitignore  CMakeLists.txt  CuraDev_Ubuntu15.04.sh  README.md  build-marlin.sh  cura  cura.desktop  env_osx.sh  env_win32.bat  env_win64.bat  marlin-build.sh  qpyqmlobject.cpp.patch  qpyqmlobject.h.patch  setup_osx.py.in  setup_win32.py.in  ubuntu-15.04-build-script.sh  ubuntu-15.04-build-script.txt  ubuntu-15.10-build-script.sh
NSIS/: FileAssociation.nsh
cmake/: BuildPlatformDetection.cmake  FindAppImageKit.cmake  FindGPG.cmake  FindPyQt.cmake  FindPythonPackage.cmake  FindSHA1Sum.cmake  FindSciPy.cmake  FindSigntool.cmake  Findcx_Freeze.cmake  GetFromEnvironmentOrCache.cmake  NSIS.template.in  Python.cmake  SetProjectDependencies.cmake
docker/linux/: build.sh  build_in_docker.sh
docker/windows/: build.ps1  build_in_docker_vs2015.cmd  build_in_docker_vs2019.cmd
packaging/: Info.plist.in  NSIS_header.xcf  NSIS_wizard.xcf  VolumeIcons_Cura.icns  cpackconfig_common.cmake  cpackconfig_nsis.cmake  cpackconfig_wix.cmake  cura.appdata.xml  cura.desktop  cura.desktop.in  cura.sh  cura.wxs  cura.xml  linux.cmake  linux_mod_rpath.sh  osx.cmake  patch_qt5.10_dialogplugin.py  setup_linux.py.in  setup_osx.py.in  setup_win32.py.in  windows - Kopie.cmake  windows.cmake  windows_touchcache.py
packaging/python3.7/: osx.cmake  setup_linux.py.in  setup_osx.py.in  setup_win32.py.in  windows.cmake
packaging/python3.8/: cura.sh  linux.cmake  osx.cmake  setup_linux.py.in  setup_osx.py.in  setup_win32.py.in  windows.cmake
projects/: Cura-Doodle3D.cmake  Cura-InterfacePlugin.cmake  Cura-OctoPrint.cmake  Cura-PostProcessing.cmake  Cura-UM3NetworkPrinting.cmake  Cura.cmake  CuraEngine.cmake  ExtraRepository.cmake  Uranium.cmake  cura-binary-data.cmake  fdm_materials.cmake  libCharon.cmake
scripts/: build.sh  build_in_docker.sh
scripts/linux/: build.sh  build_in_docker.sh
scripts/python3.5/linux/: build.sh  build_in_docker.sh
scripts/python3.5/windows/: build.ps1  build_in_docker_vs2015.cmd
scripts/python3.7/linux/: build.sh  build_in_docker.sh
scripts/python3.7/windows/: build.ps1  build_in_docker.cmd
scripts/python3.8/linux/: build.sh  build_in_docker.sh
scripts/windows/: build.ps1  build2.ps1  build_in_docker_vs2015.cmd
signing/: fix_codesign_issues.sh  linux.cmake  osx.cmake  sign_cura_macOS.sh  windows.cmake
